--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <!--  this is i am commenting for github hosting only-->
 <!--  <base href="$FLUTTER_BASE_HREF">-->
 
+   <base href="https://malikali3.github.io/tryingMuqablaWeb/">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
